custom_manifests/Jenkins/misc/kubeflow/crd-gateways-kubeflow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
# Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  # - hosts:
  #   - '*'
  #   port:
  #     name: notebooks # Use http or https
  #     protocol: TCP
  #     port: 8000
  #     targetPort: 8000
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
